tests/error/misc_errors/function_type_not_list1.err
Error: Invalid type (at $FILE:6:12)
  | 
4 | 
5 | @guppy.declare
6 | def foo(f: "Function[int, float, bool]") -> None: ...
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid `Function` type

Help: Function types are specified as follows: `Function[[<arguments>], <return
type>]`

Guppy compilation failed due to 1 previous error
